--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -1,16 +1,11 @@
 ---
 title: Client
-id: client
+id: Client
 ---
-
-the client does client stuff blallblalb lalal bal babl aabab
-blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab
-
-blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab blallblalb lalal bal babl aabab
 
 ## List of Methods
 
-### void SendMessage (table)
+### void SendMessage(table) {#void-SendMessage-table}
 Send a message to server scripts. The message is a table
 
 ```lua
@@ -36,10 +31,9 @@ table.insert(my_msgs, {act = 'erase'})
 table.insert(my_msgs, {act = 'erase'})
 Client:SendMessages(my_msgs)
 ```
+### void SendMessages(table) {#void-SendMessages-table}
 
-### void SendMessages (table)
-
-### table ReceiveMessages (this_state)
+### table ReceiveMessages(this_state) {#table-ReceiveMessages-thisstate}
 Recieve messages send by server scripts
 
 ```lua title="Link messages to actions and do them on recieve"
@@ -57,157 +51,155 @@ for i,msg in ipairs(Client:ReceiveMessages()) do
     end
 end
 ```
+### string UIItemUpdate(int, UIItem, userdata) {#string-UIItemUpdate-int-UIItem-userdata}
 
-### string UIItemUpdate (uint32_t, UIItem, basic_object<classsol::basic_reference<0> >)
+### void OpenKeyboardShortcutInput(string) {#void-OpenKeyboardShortcutInput-string}
 
-### void OpenKeyboardShortcutInput (string)
+### void ToggleUICreatorWindow() {#void-ToggleUICreatorWindow}
 
-### void ToggleUICreatorWindow ()
+### void ToggleUIStudioSDK() {#void-ToggleUIStudioSDK}
 
-### [Camera](/api/Camera) GetCamera ()
-Returns [`Camera`](/api/Camera)
+### void ToggleUIVisibility() {#void-ToggleUIVisibility}
 
-### string UIItemUpdate (uint, UIItem, table)
+### void ToggleMainMenuVisibility() {#void-ToggleMainMenuVisibility}
 
-### Camera GetCamera ()
+### void SetToClientUI() {#void-SetToClientUI}
 
-### bool IsClient ()
+### bool GetUICapturesMouseOrKeyboard() {#bool-GetUICapturesMouseOrKeyboard}
 
-### bool IsServer ()
+### bool GetUICapturesMouse() {#bool-GetUICapturesMouse}
 
-### void ToggleUIStudioSDK ()
+### bool GetUICapturesKeyboard() {#bool-GetUICapturesKeyboard}
 
-### void ToggleUIVisibility ()
+### bool GetUICapturesTextInput() {#bool-GetUICapturesTextInput}
 
-### void ToggleMainMenuVisibility ()
+### bool GetUIIsInEditMode() {#bool-GetUIIsInEditMode}
 
-### void SetToClientUI ()
+### void LoadDefaultLayout() {#void-LoadDefaultLayout}
 
-### bool GetUICapturesMouseOrKeyboard ()
+### void OpenUIWindow(string) {#void-OpenUIWindow-string}
 
-### bool GetUICapturesMouse ()
+### void CloseUIWindow(string) {#void-CloseUIWindow-string}
 
-### bool GetUICapturesKeyboard ()
+### void ToggleUIWindow(string) {#void-ToggleUIWindow-string}
 
-### bool GetUICapturesTextInput ()
+### bool IsWindowOpen(string) {#bool-IsWindowOpen-string}
 
-### bool GetUIIsInEditMode ()
+### void OpenScriptFile(string, int) {#void-OpenScriptFile-string-int}
 
-### void LoadDefaultLayout ()
+### void OpenServerScriptFile(string, int) {#void-OpenServerScriptFile-string-int}
 
-### void OpenUIWindow (string)
+### void OpenZeroBraneStudio(string) {#void-OpenZeroBraneStudio-string}
 
-### void CloseUIWindow (string)
+### void OpenZeroBraneStudioActions() {#void-OpenZeroBraneStudioActions}
 
-### void ToggleUIWindow (string)
+### void SetUIScale(float) {#void-SetUIScale-float}
 
-### bool IsWindowOpen (string)
+### float GetUIScale() {#float-GetUIScale}
 
-### void OpenZeroBraneStudio (string)
+### bool GetUIScaleAuto() {#bool-GetUIScaleAuto}
 
-### void OpenZeroBraneStudioActions ()
+### void SetUIScaleAuto(bool) {#void-SetUIScaleAuto-bool}
 
-### void SetUIScale (float)
+### string GetMontageURL() {#string-GetMontageURL}
 
-### float GetUIScale ()
+### void SetMontageURL(string) {#void-SetMontageURL-string}
 
-### bool GetUIScaleAuto ()
+### void LoadMontageByURL() {#void-LoadMontageByURL}
 
-### void SetUIScaleAuto (bool)
+### void CancelLoadMontageByURL() {#void-CancelLoadMontageByURL}
 
-### string GetMontageURL ()
+### string GetConnectionStatus() {#string-GetConnectionStatus}
 
-### void SetMontageURL (string)
+### void DisconnectFromMontageServer() {#void-DisconnectFromMontageServer}
 
-### void LoadMontageByURL ()
+### float GetLogValue(string) {#float-GetLogValue-string}
 
-### void CancelLoadMontageByURL ()
+### void SetLogValue(string, float) {#void-SetLogValue-string-float}
 
-### string GetConnectionStatus ()
+### void SetStrLogValue(string, string) {#void-SetStrLogValue-string-string}
 
-### void DisconnectFromMontageServer ()
+### float GetLogIValue(int) {#float-GetLogIValue-int}
 
-### float GetLogValue (string)
+### string GetLogIValueName(int) {#string-GetLogIValueName-int}
 
-### void SetLogValue (string, float)
+### string GetLogIValueOutputName(int) {#string-GetLogIValueOutputName-int}
 
-### void SetStrLogValue (string, string)
+### bool GetLogIsValue(int) {#bool-GetLogIsValue-int}
 
-### float GetLogIValue (uint)
+### int GetLogValuesCount() {#int-GetLogValuesCount}
 
-### string GetLogIValueName (uint)
+### Vector_float GetLogValueForPlot(string) {#Vectorfloat-GetLogValueForPlot-string}
 
-### string GetLogIValueOutputName (uint)
+### string GetLogStrValue(string) {#string-GetLogStrValue-string}
 
-### bool GetLogIsValue (uint)
+### string GetLogStrIValue(int) {#string-GetLogStrIValue-int}
 
-### uint GetLogValuesCount ()
+### string GetLogStrIValueName(int) {#string-GetLogStrIValueName-int}
 
-### Vector_float GetLogValueForPlot (string)
+### string GetLogStrIValueOutputName(int) {#string-GetLogStrIValueOutputName-int}
 
-### string GetLogStrValue (string)
+### bool GetLogStrIsValue(int) {#bool-GetLogStrIsValue-int}
 
-### string GetLogStrIValue (uint)
+### int GetLogStrValuesCount() {#int-GetLogStrValuesCount}
 
-### string GetLogStrIValueName (uint)
+### double GetTime() {#double-GetTime}
 
-### string GetLogStrIValueOutputName (uint)
+### double GetLogTime(string) {#double-GetLogTime-string}
 
-### bool GetLogStrIsValue (uint)
+### float GetFPS() {#float-GetFPS}
 
-### uint GetLogStrValuesCount ()
+### ConfigMap GetConfigInputActions() {#ConfigMap-GetConfigInputActions}
 
-### double GetTime ()
+### void ConnectToServer(Client) {#void-ConnectToServer-Client}
 
-### double GetLogTime (string)
+### void SetConnectAddr(string) {#void-SetConnectAddr-string}
 
-### float GetFPS ()
+### string GetConnectAddr() {#string-GetConnectAddr}
 
-### ConfigMap GetConfigInputActions ()
+### bool OpenFolder(string) {#bool-OpenFolder-string}
 
-### void ConnectToServer (Client)
+### int GetScriptsVersion() {#int-GetScriptsVersion}
 
-### void SetConnectAddr (string)
+### int GetClientScriptsVersion() {#int-GetClientScriptsVersion}
 
-### string GetConnectAddr ()
+### void ResendServerLua() {#void-ResendServerLua}
 
-### bool OpenFolder (string)
+### bool LuaConsole(Client, bool, bool) {#bool-LuaConsole-Client-bool-bool}
 
-### uint GetScriptsVersion ()
+### bool LuaConsole(Client, bool) {#bool-LuaConsole-Client-bool}
 
-### uint GetClientScriptsVersion ()
+### void LuaOpenDebugger() {#void-LuaOpenDebugger}
 
-### void ResendServerLua ()
+### void LuaEnableDebugging(bool) {#void-LuaEnableDebugging-bool}
 
-### bool LuaConsole (Client, bool, bool)
+### Camera GetCamera() {#Camera-GetCamera}
 
-### bool LuaConsole (Client, bool)
+### vector<classae::core::UIItem*,classstd::allocator<classae::core::UIItem*> > GetVisibleWindows() {#vectorclassaecoreUIItemclassstdallocatorclassaecoreUIItem-GetVisibleWindows}
 
-### void LuaOpenDebugger ()
+### bool IsContainerEnabledAndVisible(UIItem) {#bool-IsContainerEnabledAndVisible-UIItem}
 
-### void LuaEnableDebugging (bool)
+### ConnectionInfo GetConnectionInfo() {#ConnectionInfo-GetConnectionInfo}
 
-### vector<classae::core::UIItem*,classstd::allocator<classae::core::UIItem*> > GetVisibleWindows ()
+### NetworkStat GetNetworkStat() {#NetworkStat-GetNetworkStat}
 
-### bool IsContainerEnabledAndVisible (UIItem)
+### void Log(string) {#void-Log-string}
 
-### ConnectionInfo GetConnectionInfo ()
+### void ServerLog(string, string) {#void-ServerLog-string-string}
 
-### NetworkStat GetNetworkStat ()
+### string GetAppCommandLine(Client) {#string-GetAppCommandLine-Client}
 
-### void Log (string)
+### AmStreamingStats GetVoxelStreamStats(Client) {#AmStreamingStats-GetVoxelStreamStats-Client}
 
-### void ServerLog (string, string)
+### void OnLuaLog() {#void-OnLuaLog}
 
-### string GetAppCommandLine (Client)
+### bool IsClient() {#bool-IsClient}
 
-### AmStreamingStats GetVoxelStreamStats (Client)
+### bool IsServer() {#bool-IsServer}
 
-### void OnLuaLog ()
+### void SelectItemInUICreator(UIItem) {#void-SelectItemInUICreator-UIItem}
 
-### void SelectItemInUICreator (UIItem)
+### UIItem GetUIItemByUIActionID(int) {#UIItem-GetUIItemByUIActionID-int}
 
-### UIItem GetUIItemByUIActionID (uint)
-
-### string GetUIActionType (uint)
+### string GetUIActionType(int) {#string-GetUIActionType-int}
 
