Add emmy lua generator, add using vs code doc, update hidden docs

--- a/docs/90-api/client.mdx
+++ b/docs/90-api/client.mdx
@@ -136,8 +136,6 @@ end
 
 ### int GetLogValuesCount() {#int-GetLogValuesCount}
 
-### Vector_float GetLogValueForPlot(string) {#Vectorfloat-GetLogValueForPlot-string}
-
 ### string GetLogStrValue(string) {#string-GetLogStrValue-string}
 
 ### string GetLogStrIValue(int) {#string-GetLogStrIValue-int}
@@ -155,8 +153,6 @@ end
 ### double GetLogTime(string) {#double-GetLogTime-string}
 
 ### float GetFPS() {#float-GetFPS}
-
-### ConfigMap GetConfigInputActions() {#ConfigMap-GetConfigInputActions}
 
 ### void ConnectToServer(Client) {#void-ConnectToServer-Client}
 
@@ -210,4 +206,8 @@ Returns [`Camera`](/api/camera)
 ### string GetUIActionType(int) {#string-GetUIActionType-int}
 
 ### userdata GetVisibleWindows() {#userdata-GetVisibleWindows}
+
+### userdata GetLogValueForPlot(string) {#userdata-GetLogValueForPlot-string}
+
+### Config GetConfigInputActions() {#Config-GetConfigInputActions}
 
