--- a/docs/90-api/input.mdx
+++ b/docs/90-api/input.mdx
@@ -79,8 +79,6 @@ id: Input
 
 ### bool FingerDown(int) {#bool-FingerDown-int}
 
-### Vector_int Fingers() {#Vectorint-Fingers}
-
 ### bool FingerUp(int) {#bool-FingerUp-int}
 
 ### Vec2 FingerPos(int) {#Vec2-FingerPos-int}
@@ -112,4 +110,6 @@ id: Input
 ### float JoyAxis(int, int) {#float-JoyAxis-int-int}
 
 ### table GetInputEvents(Input) {#table-GetInputEvents-Input}
+
+### userdata Fingers() {#userdata-Fingers}
 
