--- a/docs/90-api/vec3.mdx
+++ b/docs/90-api/vec3.mdx
@@ -94,9 +94,9 @@ local res = vec * 3 --res is Vec3(0, 30, 0)
 
 ### float Length(Vec3) {#float-Length-Vec3}
 
-### vec<3,bool,0> IsNaN(Vec3) {#vec3bool0-IsNaN-Vec3}
-
 ### Vec4 __mul(Mat4, Vec3) {#Vec4-mul-Mat4-Vec3}
+
+### userdata IsNaN(Vec3) {#userdata-IsNaN-Vec3}
 
 ## List of Properties
 
