--- a/docs/90-api/enums/type.mdx
+++ b/docs/90-api/enums/type.mdx
@@ -8,15 +8,5 @@ id: type
 | Name | Description |
 | - | - |
 | Unknown |  |
-| Vertex |  |
-| TesselationControl |  |
-| TesselationEvaluation |  |
-| Geometry |  |
-| Fragment |  |
-| Compute |  |
-| RayGen |  |
-| AnyHit |  |
-| ClosestHit |  |
-| Miss |  |
-| Intersection |  |
-| Callable |  |
+| TopLevel |  |
+| BottomLevel |  |
