--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -7,8 +7,6 @@ id: Object
 
 ### Object() {#Object}
 
-### void RemoveAllComponents(Object) {#void-RemoveAllComponents-Object}
-
 ### userdata AddComponent(string) {#userdata-AddComponent-string}
 
 ### userdata GetComponent(int) {#userdata-GetComponent-int}
@@ -16,6 +14,8 @@ id: Object
 ### userdata RemoveComponent(string) {#userdata-RemoveComponent-string}
 
 ### userdata GetComponentByType(string) {#userdata-GetComponentByType-string}
+
+### void RemoveAllNonNativeComponents(Object) {#void-RemoveAllNonNativeComponents-Object}
 
 ## List of Properties
 
@@ -50,4 +50,6 @@ id: Object
 ### bool active {#bool-active}
 
 ### Transform transform {#Transform-transform}
+
+### bool dontSave {#bool-dontSave}
 
