--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -43,6 +43,10 @@ id: Scene
 
 ### VoxelDB GetVoxelDB(string) {#VoxelDB-GetVoxelDB-string}
 
+### Object CloneObject(Object) {#Object-CloneObject-Object}
+
+### int Merge(string) {#int-Merge-string}
+
 ## List of Properties
 
 ### userdata SysTransform {#userdata-SysTransform}
@@ -52,4 +56,8 @@ id: Scene
 ### MeshData SysMeshData {#MeshData-SysMeshData}
 
 ### LightingUpdate lighting {#LightingUpdate-lighting}
+
+### userdata SysVoxelData {#userdata-SysVoxelData}
+
+### userdata SysVoxelRender {#userdata-SysVoxelRender}
 
