--- a/docs/90-api/uIItem.mdx
+++ b/docs/90-api/uIItem.mdx
@@ -11,21 +11,7 @@ id: UIItem
 
 ### string GetID() {#string-GetID}
 
-### userdata GetItems() {#userdata-GetItems}
+### string GetType() {#string-GetType}
 
-### bool IsGrid() {#bool-IsGrid}
-
-### int GetGridRows() {#int-GetGridRows}
-
-### int GetGridCols() {#int-GetGridCols}
-
-### userdata GetGridItems() {#userdata-GetGridItems}
-
-### int PrepareGridItems() {#int-PrepareGridItems}
-
-### bool IsTemplating() {#bool-IsTemplating}
-
-### void PrepareTemplatedItems(UIItem) {#void-PrepareTemplatedItems-UIItem}
-
-### table GetLuaItem() {#table-GetLuaItem}
+### string GetLabel() {#string-GetLabel}
 
