--- a/docs/90-api/vec2.mdx
+++ b/docs/90-api/vec2.mdx
@@ -99,9 +99,115 @@ id: Vec2
 
 ### Vec2 GetRotated90() {#Vec2-GetRotated90}
 
+### Vec2(Vec2) {#Vec2-Vec2}
+
+### Vec2(Vec2i) {#Vec2-Vec2i}
+
+### float __index(Vec2, int) {#float-index-Vec2-int}
+
+### void __newindex(Vec2, int, float) {#void-newindex-Vec2-int-float}
+
+### Vec2 __mul(Vec2, Vec2i) {#Vec2-mul-Vec2-Vec2i}
+
+### Vec2 __div(Vec2, Vec2i) {#Vec2-div-Vec2-Vec2i}
+
+### Vec2 __add(Vec2, Vec2i) {#Vec2-add-Vec2-Vec2i}
+
+### Vec2 __sub(Vec2, Vec2i) {#Vec2-sub-Vec2-Vec2i}
+
+### bool __eq(Vec2, Vec2i) {#bool-eq-Vec2-Vec2i}
+
+### bool __eq(Vec2, Vec2) {#bool-eq-Vec2-Vec2}
+
+### float __len(Vec2, Vec2) {#float-len-Vec2-Vec2}
+
+### float Sum() {#float-Sum}
+
+### float Sub() {#float-Sub}
+
+### float Diff() {#float-Diff}
+
+### float Prod() {#float-Prod}
+
+### float LinLen() {#float-LinLen}
+
+### float Len() {#float-Len}
+
+### float SqLen() {#float-SqLen}
+
+### float MaxComponent() {#float-MaxComponent}
+
+### float MinComponent() {#float-MinComponent}
+
+### float GetMax() {#float-GetMax}
+
+### float GetMin() {#float-GetMin}
+
+### bool IsWithin(float) {#bool-IsWithin-float}
+
+### bool IsIn(float) {#bool-IsIn-float}
+
+### void Insert(float) {#void-Insert-float}
+
+### Vec2 GetAbs() {#Vec2-GetAbs}
+
+### float GetAvg() {#float-GetAvg}
+
+### Vec2 XY() {#Vec2-XY}
+
+### Vec2 YX() {#Vec2-YX}
+
+### bool IsAnyNaN() {#bool-IsAnyNaN}
+
+### Vec2 GetUnit() {#Vec2-GetUnit}
+
+### Vec2 GetUnitSafe() {#Vec2-GetUnitSafe}
+
+### Vec2 SetAbs() {#Vec2-SetAbs}
+
+### float Dot(Vec2, Vec2i) {#float-Dot-Vec2-Vec2i}
+
+### Vec3 Cross(Vec2, Vec2i) {#Vec3-Cross-Vec2-Vec2i}
+
+### Vec3 Cross(Vec2, Vec2) {#Vec3-Cross-Vec2-Vec2}
+
+### Vec2 Lerp(Vec2, Vec2, float) {#Vec2-Lerp-Vec2-Vec2-float}
+
+### Vec2 Mix(Vec2, Vec2, float) {#Vec2-Mix-Vec2-Vec2-float}
+
+### void Clamp(Vec2, Vec2, Vec2) {#void-Clamp-Vec2-Vec2-Vec2}
+
+### void Clamp(Vec2, float, float) {#void-Clamp-Vec2-float-float}
+
+### Vec2 GetClamped(Vec2, Vec2, Vec2) {#Vec2-GetClamped-Vec2-Vec2-Vec2}
+
+### Vec2 GetClamped(Vec2, float, float) {#Vec2-GetClamped-Vec2-float-float}
+
+### void Ceil(Vec2) {#void-Ceil-Vec2}
+
+### Vec2 GetCeiled(Vec2) {#Vec2-GetCeiled-Vec2}
+
+### void Floor(Vec2) {#void-Floor-Vec2}
+
+### Vec2 GetFloored(Vec2) {#Vec2-GetFloored-Vec2}
+
+### void Round() {#void-Round}
+
+### Vec2 GetRounded(Vec2) {#Vec2-GetRounded-Vec2}
+
+### void SetLength(Vec2, float) {#void-SetLength-Vec2-float}
+
+### float DistanceTo(Vec2, Vec2) {#float-DistanceTo-Vec2-Vec2}
+
 ## List of Properties
 
 ### float x {#float-x}
 
 ### float y {#float-y}
+
+### float length {#float-length}
+
+### Vec2 zero {#Vec2-zero}
+
+### Vec2 normalized {#Vec2-normalized}
 
