--- a/docs/90-api/vec4.mdx
+++ b/docs/90-api/vec4.mdx
@@ -35,6 +35,120 @@ id: Vec4
 
 ### Vec4 __unm(Vec4, Vec4) {#Vec4-unm-Vec4-Vec4}
 
+### Vec4(Vec4) {#Vec4-Vec4}
+
+### Vec4(Vec2, float, float) {#Vec4-Vec2-float-float}
+
+### Vec4(Vec3, float) {#Vec4-Vec3-float}
+
+### Vec4(structAsObject) {#Vec4-structAsObject}
+
+### Vec4(structAsRawPointer) {#Vec4-structAsRawPointer}
+
+### Vec4(structAsObject) {#Vec4-structAsObject}
+
+### Vec4(structAsRawPointer) {#Vec4-structAsRawPointer}
+
+### float __index(Vec4, int) {#float-index-Vec4-int}
+
+### void __newindex(Vec4, int, float) {#void-newindex-Vec4-int-float}
+
+### Vec4 __mul(Vec4, Quat) {#Vec4-mul-Vec4-Quat}
+
+### bool __eq(Vec4, Vec4) {#bool-eq-Vec4-Vec4}
+
+### float __len(Vec4, Vec4) {#float-len-Vec4-Vec4}
+
+### float Sum() {#float-Sum}
+
+### float GetMul() {#float-GetMul}
+
+### float Prod() {#float-Prod}
+
+### float LinLen() {#float-LinLen}
+
+### float Len() {#float-Len}
+
+### float SqLen() {#float-SqLen}
+
+### float MaxComponent() {#float-MaxComponent}
+
+### float MinComponent() {#float-MinComponent}
+
+### int GetMinIndex() {#int-GetMinIndex}
+
+### int GetMaxIndex() {#int-GetMaxIndex}
+
+### Vec4 GetAbs() {#Vec4-GetAbs}
+
+### Vec2 V2(Vec4) {#Vec2-V2-Vec4}
+
+### Vec3 V3(Vec4) {#Vec3-V3-Vec4}
+
+### Vec2 XY() {#Vec2-XY}
+
+### Vec2 XZ() {#Vec2-XZ}
+
+### Vec2 YZ() {#Vec2-YZ}
+
+### Vec3 YZW() {#Vec3-YZW}
+
+### Vec3 ZYX() {#Vec3-ZYX}
+
+### Vec3 ZWX() {#Vec3-ZWX}
+
+### bool IsAnyNaN() {#bool-IsAnyNaN}
+
+### Vec4 GetUnit() {#Vec4-GetUnit}
+
+### Vec4 GetUnitSafe() {#Vec4-GetUnitSafe}
+
+### Vec4 SetAbs() {#Vec4-SetAbs}
+
+### float Dot(Vec4, Vec4) {#float-Dot-Vec4-Vec4}
+
+### Vec4 Lerp(Vec4, Vec4, float) {#Vec4-Lerp-Vec4-Vec4-float}
+
+### Vec4 Mix(Vec4, Vec4, float) {#Vec4-Mix-Vec4-Vec4-float}
+
+### Vec4 Normalize() {#Vec4-Normalize}
+
+### Vec4 NormalizeSafe() {#Vec4-NormalizeSafe}
+
+### Vec4 GetNormalized() {#Vec4-GetNormalized}
+
+### Vec4 GetNormalizedSafe() {#Vec4-GetNormalizedSafe}
+
+### void Clamp(Vec4, float, float) {#void-Clamp-Vec4-float-float}
+
+### Vec4 GetClamped(Vec4, float, float) {#Vec4-GetClamped-Vec4-float-float}
+
+### Vec4 Signs() {#Vec4-Signs}
+
+### void Ceil(Vec4) {#void-Ceil-Vec4}
+
+### Vec4 GetCeiled(Vec4) {#Vec4-GetCeiled-Vec4}
+
+### void Floor(Vec4) {#void-Floor-Vec4}
+
+### Vec4 GetFloored(Vec4) {#Vec4-GetFloored-Vec4}
+
+### void Round(Vec4) {#void-Round-Vec4}
+
+### Vec4 GetRounded(Vec4) {#Vec4-GetRounded-Vec4}
+
+### void SetLength(Vec4, float) {#void-SetLength-Vec4-float}
+
+### float Length(Vec4, Vec4) {#float-Length-Vec4-Vec4}
+
+### float Length(Vec4) {#float-Length-Vec4}
+
+### Vec4 IsNaN(Vec4) {#Vec4-IsNaN-Vec4}
+
+### bool IsZero(Vec4) {#bool-IsZero-Vec4}
+
+### float DistanceTo(Vec4, Vec4) {#float-DistanceTo-Vec4-Vec4}
+
 ## List of Properties
 
 ### float x {#float-x}
@@ -44,4 +158,10 @@ id: Vec4
 ### float z {#float-z}
 
 ### float w {#float-w}
+
+### Vec4 zero {#Vec4-zero}
+
+### float length {#float-length}
+
+### Vec4 normalized {#Vec4-normalized}
 
