--- a/docs/90-api/vec3.mdx
+++ b/docs/90-api/vec3.mdx
@@ -68,10 +68,6 @@ local res = vec * 3 --res is Vec3(0, 30, 0)
 
 ### Vec3 Mix(Vec3, Vec3, float) {#Vec3-Mix-Vec3-Vec3-float}
 
-### void Normalize(Vec3) {#void-Normalize-Vec3}
-
-### Vec3 GetNormalized(Vec3) {#Vec3-GetNormalized-Vec3}
-
 ### void Clamp(Vec3, float, float) {#void-Clamp-Vec3-float-float}
 
 ### Vec3 GetClamped(Vec3, float, float) {#Vec3-GetClamped-Vec3-float-float}
@@ -96,7 +92,147 @@ local res = vec * 3 --res is Vec3(0, 30, 0)
 
 ### Vec4 __mul(Mat4, Vec3) {#Vec4-mul-Mat4-Vec3}
 
-### userdata IsNaN(Vec3) {#userdata-IsNaN-Vec3}
+### Vec3(Vec3) {#Vec3-Vec3}
+
+### Vec3(Vec3i) {#Vec3-Vec3i}
+
+### Vec3(Vec2, float) {#Vec3-Vec2-float}
+
+### Vec3(structAsObject) {#Vec3-structAsObject}
+
+### Vec3(structAsRawPointer) {#Vec3-structAsRawPointer}
+
+### Vec3(structAsObject) {#Vec3-structAsObject}
+
+### Vec3(structAsRawPointer) {#Vec3-structAsRawPointer}
+
+### float __index(Vec3, int) {#float-index-Vec3-int}
+
+### void __newindex(Vec3, int, float) {#void-newindex-Vec3-int-float}
+
+### Vec3 __mul(Vec3, Quat) {#Vec3-mul-Vec3-Quat}
+
+### Vec3 __mul(Vec3, Vec3i) {#Vec3-mul-Vec3-Vec3i}
+
+### Vec3 __div(Vec3, Vec3i) {#Vec3-div-Vec3-Vec3i}
+
+### Vec3 __add(Vec3, Vec3i) {#Vec3-add-Vec3-Vec3i}
+
+### Vec3 __sub(Vec3, Vec3i) {#Vec3-sub-Vec3-Vec3i}
+
+### bool __eq(Vec3, Vec3i) {#bool-eq-Vec3-Vec3i}
+
+### bool __eq(Vec3, Vec3) {#bool-eq-Vec3-Vec3}
+
+### float __len(Vec3, Vec3) {#float-len-Vec3-Vec3}
+
+### float Sum() {#float-Sum}
+
+### float GetMul() {#float-GetMul}
+
+### float Prod() {#float-Prod}
+
+### Vec3 GetPow(Vec3, float) {#Vec3-GetPow-Vec3-float}
+
+### float LinLen() {#float-LinLen}
+
+### float Len() {#float-Len}
+
+### float SqLen() {#float-SqLen}
+
+### float MaxComponent() {#float-MaxComponent}
+
+### float MinComponent() {#float-MinComponent}
+
+### float GetMax() {#float-GetMax}
+
+### float GetMin() {#float-GetMin}
+
+### float GetMid() {#float-GetMid}
+
+### float MidComponent() {#float-MidComponent}
+
+### bool IsIn(float) {#bool-IsIn-float}
+
+### int GetCompIdx(float) {#int-GetCompIdx-float}
+
+### int GetCompIdxSafe(float) {#int-GetCompIdxSafe-float}
+
+### int GetMinIndex() {#int-GetMinIndex}
+
+### int GetMidIndex() {#int-GetMidIndex}
+
+### int GetMaxIndex() {#int-GetMaxIndex}
+
+### Vec3 GetGreaterSigned(float) {#Vec3-GetGreaterSigned-float}
+
+### Vec3 GetAbs() {#Vec3-GetAbs}
+
+### float GetAvg() {#float-GetAvg}
+
+### Vec2 V2(Vec3) {#Vec2-V2-Vec3}
+
+### Vec2 XY() {#Vec2-XY}
+
+### Vec2 XZ() {#Vec2-XZ}
+
+### Vec2 YX() {#Vec2-YX}
+
+### Vec2 YZ() {#Vec2-YZ}
+
+### Vec2 ZX() {#Vec2-ZX}
+
+### Vec2 ZY() {#Vec2-ZY}
+
+### Vec3 X0Z() {#Vec3-X0Z}
+
+### Vec3 XZY() {#Vec3-XZY}
+
+### Vec2 UV(int, int) {#Vec2-UV-int-int}
+
+### Vec3 UVW(int, int, int) {#Vec3-UVW-int-int-int}
+
+### bool IsAnyNaN() {#bool-IsAnyNaN}
+
+### Vec3 GetUnit() {#Vec3-GetUnit}
+
+### Vec3 GetUnitSafe() {#Vec3-GetUnitSafe}
+
+### Vec3 SetAbs() {#Vec3-SetAbs}
+
+### float Dot(Vec3, Vec3i) {#float-Dot-Vec3-Vec3i}
+
+### Vec3 Cross(Vec3, Vec3i) {#Vec3-Cross-Vec3-Vec3i}
+
+### Vec3 Cross(Vec3, Vec3) {#Vec3-Cross-Vec3-Vec3}
+
+### Vec3 Normalize() {#Vec3-Normalize}
+
+### Vec3 NormalizeSafe() {#Vec3-NormalizeSafe}
+
+### Vec3 GetNormalized() {#Vec3-GetNormalized}
+
+### Vec3 GetNormalizedSafe() {#Vec3-GetNormalizedSafe}
+
+### Vec3 ClampRadius(float) {#Vec3-ClampRadius-float}
+
+### Vec3 Nonzero() {#Vec3-Nonzero}
+
+### Vec3 Signs() {#Vec3-Signs}
+
+### Vec3 SignsUnits() {#Vec3-SignsUnits}
+
+### Vec3i Signsi() {#Vec3i-Signsi}
+
+### Vec3i SignsUnitsi32() {#Vec3i-SignsUnitsi32}
+
+### Vec3i GetVec3i() {#Vec3i-GetVec3i}
+
+### Vec3 IsNaN(Vec3) {#Vec3-IsNaN-Vec3}
+
+### bool IsZero(Vec3) {#bool-IsZero-Vec3}
+
+### float DistanceTo(Vec3, Vec3) {#float-DistanceTo-Vec3-Vec3}
 
 ## List of Properties
 
@@ -121,4 +257,10 @@ local x = vec.x
 ### Vec3 forward {#Vec3-forward}
 
 ### Vec3 normalized {#Vec3-normalized}
+
+### Vec3 down {#Vec3-down}
+
+### Vec3 left {#Vec3-left}
+
+### Vec3 back {#Vec3-back}
 
