--- a/docs/90-api/voxelDB.mdx
+++ b/docs/90-api/voxelDB.mdx
@@ -15,41 +15,19 @@ id: VoxelDB
 
 ### int FromWorld(float) {#int-FromWorld-float}
 
-### Vec3i FromWorld(Vec3) {#Vec3i-FromWorld-Vec3}
-
 ### float ToWorld(float) {#float-ToWorld-float}
-
-### Vec3 ToWorld(Vec3i) {#Vec3-ToWorld-Vec3i}
 
 ### void SetMask(Vec3i, bool) {#void-SetMask-Vec3i-bool}
 
 ### bool GetMask(Vec3i) {#bool-GetMask-Vec3i}
 
-### void SetColor(Vec3i, Vec3) {#void-SetColor-Vec3i-Vec3}
-
 ### userdata GetColor(Vec3i) {#userdata-GetColor-Vec3i}
-
-### Vec3 GetNormal(Vec3i) {#Vec3-GetNormal-Vec3i}
-
-### Vec3 GetFilteredNormal(Vec3i) {#Vec3-GetFilteredNormal-Vec3i}
-
-### userdata TraceRay(Vec3i, Vec3, float) {#userdata-TraceRay-Vec3i-Vec3-float}
-
-### void PaintSphere(Vec3i, int, Vec3) {#void-PaintSphere-Vec3i-int-Vec3}
-
-### void PaintSphereBlend(Vec3i, int, Vec3, float, float, float) {#void-PaintSphereBlend-Vec3i-int-Vec3-float-float-float}
 
 ### void ClearShape(int, Vec3i, int) {#void-ClearShape-int-Vec3i-int}
 
 ### void ClearSphere(Vec3i, int) {#void-ClearSphere-Vec3i-int}
 
 ### void InflateRadius(Vec3i, int, float, float, float) {#void-InflateRadius-Vec3i-int-float-float-float}
-
-### void MakeSphere(Vec3i, int, Vec3) {#void-MakeSphere-Vec3i-int-Vec3}
-
-### void InstantiateIE(Vec3, Quat, float) {#void-InstantiateIE-Vec3-Quat-float}
-
-### userdata TraceRayTmp(Vec3i, Vec3, float) {#userdata-TraceRayTmp-Vec3i-Vec3-float}
 
 ### void FreeTmpLayers(int) {#void-FreeTmpLayers-int}
 
@@ -74,6 +52,32 @@ id: VoxelDB
 ### void CopyTo(VoxelDB) {#void-CopyTo-VoxelDB}
 
 ### bool Save(string, string, int) {#bool-Save-string-string-int}
+
+### VoxelInspectData Inspect(Vec3i, int, int, userdata, int) {#VoxelInspectData-Inspect-Vec3i-int-int-userdata-int}
+
+### string GetLayers() {#string-GetLayers}
+
+### Vec3i FromWorld(Vec3) {#Vec3i-FromWorld-Vec3}
+
+### Vec3 ToWorld(Vec3i) {#Vec3-ToWorld-Vec3i}
+
+### void SetColor(Vec3i, Vec3) {#void-SetColor-Vec3i-Vec3}
+
+### Vec3 GetNormal(Vec3i) {#Vec3-GetNormal-Vec3i}
+
+### Vec3 GetFilteredNormal(Vec3i) {#Vec3-GetFilteredNormal-Vec3i}
+
+### userdata TraceRay(Vec3i, Vec3, float) {#userdata-TraceRay-Vec3i-Vec3-float}
+
+### void PaintSphere(Vec3i, int, Vec3) {#void-PaintSphere-Vec3i-int-Vec3}
+
+### void PaintSphereBlend(Vec3i, int, Vec3, float, float, float) {#void-PaintSphereBlend-Vec3i-int-Vec3-float-float-float}
+
+### void MakeSphere(Vec3i, int, Vec3) {#void-MakeSphere-Vec3i-int-Vec3}
+
+### void InstantiateIE(Vec3, Quat, float) {#void-InstantiateIE-Vec3-Quat-float}
+
+### userdata TraceRayTmp(Vec3i, Vec3, float) {#userdata-TraceRayTmp-Vec3i-Vec3-float}
 
 ## List of Properties
 
