--- a/docs/90-api/camera.mdx
+++ b/docs/90-api/camera.mdx
@@ -27,8 +27,6 @@ id: Camera
 
 ### Vec3 GetUp(Object3D) {#Vec3-GetUp-Object3D}
 
-### Mat4 GetLtw(Object3D) {#Mat4-GetLtw-Object3D}
-
 ### Vec3 GetPosition(Object3D) {#Vec3-GetPosition-Object3D}
 
 ### void SetPosition(Vec3) {#void-SetPosition-Vec3}
@@ -49,8 +47,6 @@ id: Camera
 
 ### Vec3 GetUp() {#Vec3-GetUp}
 
-### Mat4 GetLtw() {#Mat4-GetLtw}
-
 ### Vec3 GetPosition() {#Vec3-GetPosition}
 
 ### void SetPosition(Vec3) {#void-SetPosition-Vec3}
@@ -59,13 +55,17 @@ id: Camera
 
 ### void SetFrustum(Frustum) {#void-SetFrustum-Frustum}
 
-### Mat4 GetProjection() {#Mat4-GetProjection}
-
 ### Vec3 GetRay(Vec2) {#Vec3-GetRay-Vec2}
 
 ### void SetFovY(float) {#void-SetFovY-float}
 
 ### float GetFovY() {#float-GetFovY}
+
+### Matrix4f GetLtw(Object3D) {#Matrix4f-GetLtw-Object3D}
+
+### Matrix4f GetLtw() {#Matrix4f-GetLtw}
+
+### Matrix4f GetProjection() {#Matrix4f-GetProjection}
 
 ## List of Properties
 
