--- a/docs/90-api/commandLine.mdx
+++ b/docs/90-api/commandLine.mdx
@@ -17,3 +17,9 @@ id: CommandLine
 
 ### Vec3 GetOptionVec3(string, Vec3) {#Vec3-GetOptionVec3-string-Vec3}
 
+## List of Properties
+
+### string type {#string-type}
+
+### Object object {#Object-object}
+
