--- a/docs/90-api/config.mdx
+++ b/docs/90-api/config.mdx
@@ -55,3 +55,9 @@ id: Config
 
 ### table GetAllValuesStringified(Config) {#table-GetAllValuesStringified-Config}
 
+## List of Properties
+
+### ClientConnectionInfo client {#ClientConnectionInfo-client}
+
+### ServerConnectionInfo server {#ServerConnectionInfo-server}
+
