--- a/docs/90-api/enums/type.mdx
+++ b/docs/90-api/enums/type.mdx
@@ -8,5 +8,9 @@ id: type
 | Name | Description |
 | - | - |
 | Unknown |  |
-| TopLevel |  |
-| BottomLevel |  |
+| Vertex |  |
+| Index |  |
+| Constant |  |
+| Storage |  |
+| ShaderBindingTable |  |
+| Auto |  |
