--- a/docs/90-api/input.mdx
+++ b/docs/90-api/input.mdx
@@ -117,3 +117,7 @@ id: Input
 
 ### Vec2 VrThumbStick(int) {#Vec2-VrThumbStick-int}
 
+## List of Properties
+
+### RealtimeLightingInfo realtimeLighting {#RealtimeLightingInfo-realtimeLighting}
+
