--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -47,6 +47,8 @@ id: Scene
 
 ### int Merge(string) {#int-Merge-string}
 
+### double GetDebugTime() {#double-GetDebugTime}
+
 ## List of Properties
 
 ### userdata SysTransform {#userdata-SysTransform}
