--- a/docs/90-api/voxelData.mdx
+++ b/docs/90-api/voxelData.mdx
@@ -3,6 +3,10 @@ title: VoxelData
 id: VoxelData
 ---
 
+## List of Methods
+
+### VoxelInspectData() {#VoxelInspectData}
+
 ## List of Properties
 
 ### string resource {#string-resource}
