--- a/docs/90-api/voxelRender.mdx
+++ b/docs/90-api/voxelRender.mdx
@@ -3,6 +3,12 @@ title: VoxelRender
 id: VoxelRender
 ---
 
+## List of Methods
+
+### ae::graphics::Options() {#aegraphicsOptions}
+
+### ae::graphics::Options() {#aegraphicsOptions}
+
 ## List of Properties
 
 ### string type {#string-type}
