--- a/docs/90-api/enums/usageFlagBits.mdx
+++ b/docs/90-api/enums/usageFlagBits.mdx
@@ -7,15 +7,8 @@ id: usageFlagBits
 
 | Name | Description |
 | - | - |
-| UsageTransferSrcBIT |  |
-| UsageTransferDstBIT |  |
-| UsageUniformTexelBufferBIT |  |
-| UsageStorageTexelBufferBIT |  |
-| UsageUniformBufferBIT |  |
-| UsageStorageBufferBIT |  |
-| UsageIndexBufferBIT |  |
-| UsageVertexBufferBIT |  |
-| UsageIndirectBufferBIT |  |
-| UsageConditionalRenderingBIT |  |
-| UsageRayTracingBIT |  |
-| UsageShaderDeviceAddressBIT |  |
+| UsageAllowUpdateBIT |  |
+| UsageAllowCompactionBIT |  |
+| UsagePreferFastTraceBIT |  |
+| UsagePreferFastBuildBIT |  |
+| UsageLowMemoryBIT |  |
