--- a/docs/90-api/meshData.mdx
+++ b/docs/90-api/meshData.mdx
@@ -3,6 +3,28 @@ title: MeshData
 id: MeshData
 ---
 
+## List of Methods
+
+### MeshDataBuilder() {#MeshDataBuilder}
+
+### MeshDataBuilder() {#MeshDataBuilder}
+
+### void Clear() {#void-Clear}
+
+### int AddVertex(Vec3, Vec4) {#int-AddVertex-Vec3-Vec4}
+
+### int AddVertex(Vec3, Vec2, Vec4) {#int-AddVertex-Vec3-Vec2-Vec4}
+
+### int AddVertex(Vec3, Vec2) {#int-AddVertex-Vec3-Vec2}
+
+### int AddVertex(Vec3) {#int-AddVertex-Vec3}
+
+### void AddIndex(int, int, int) {#void-AddIndex-int-int-int}
+
+### void AddIndex(int, int) {#void-AddIndex-int-int}
+
+### void AddIndex(int) {#void-AddIndex-int}
+
 ## List of Properties
 
 ### string file {#string-file}
