--- a/docs/90-api/meshRender.mdx
+++ b/docs/90-api/meshRender.mdx
@@ -3,6 +3,10 @@ title: MeshRender
 id: MeshRender
 ---
 
+## List of Methods
+
+### MipMapImage() {#MipMapImage}
+
 ## List of Properties
 
 ### userdata material {#userdata-material}
