--- a/docs/90-api/object3D.mdx
+++ b/docs/90-api/object3D.mdx
@@ -17,8 +17,6 @@ id: Object3D
 
 ### void MoveUp(float) {#void-MoveUp-float}
 
-### Mat4 GetLtw(Object3D) {#Mat4-GetLtw-Object3D}
-
 ### void Rotate(Vec3) {#void-Rotate-Vec3}
 
 ### Vec3 GetForward(Object3D) {#Vec3-GetForward-Object3D}
@@ -30,6 +28,8 @@ id: Object3D
 ### Vec3 GetPosition(Object3D) {#Vec3-GetPosition-Object3D}
 
 ### void SetPosition(Vec3) {#void-SetPosition-Vec3}
+
+### Matrix4f GetLtw(Object3D) {#Matrix4f-GetLtw-Object3D}
 
 ## List of Properties
 
