--- a/docs/90-api/uIItem.mdx
+++ b/docs/90-api/uIItem.mdx
@@ -15,3 +15,15 @@ id: UIItem
 
 ### string GetLabel() {#string-GetLabel}
 
+## List of Properties
+
+### float x {#float-x}
+
+### float y {#float-y}
+
+### float length {#float-length}
+
+### Vec2 zero {#Vec2-zero}
+
+### Vec2 normalized {#Vec2-normalized}
+
