--- a/docs/90-api/vec3.mdx
+++ b/docs/90-api/vec3.mdx
@@ -90,8 +90,6 @@ local res = vec * 3 --res is Vec3(0, 30, 0)
 
 ### float Length(Vec3) {#float-Length-Vec3}
 
-### Vec4 __mul(Mat4, Vec3) {#Vec4-mul-Mat4-Vec3}
-
 ### Vec3(Vec3) {#Vec3-Vec3}
 
 ### Vec3(Vec3i) {#Vec3-Vec3i}
@@ -233,6 +231,8 @@ local res = vec * 3 --res is Vec3(0, 30, 0)
 ### bool IsZero(Vec3) {#bool-IsZero-Vec3}
 
 ### float DistanceTo(Vec3, Vec3) {#float-DistanceTo-Vec3-Vec3}
+
+### Vec4 __mul(Vec3, Matrix4f) {#Vec4-mul-Vec3-Matrix4f}
 
 ## List of Properties
 
