--- a/docs/90-api/vec4.mdx
+++ b/docs/90-api/vec4.mdx
@@ -17,8 +17,6 @@ id: Vec4
 
 ### Vec4() {#Vec4}
 
-### Vec4 __mul(Mat4, Vec4) {#Vec4-mul-Mat4-Vec4}
-
 ### Vec4 __mul(Vec4, float) {#Vec4-mul-Vec4-float}
 
 ### Vec4 __mul(float, Vec4) {#Vec4-mul-float-Vec4}
@@ -148,6 +146,8 @@ id: Vec4
 ### bool IsZero(Vec4) {#bool-IsZero-Vec4}
 
 ### float DistanceTo(Vec4, Vec4) {#float-DistanceTo-Vec4-Vec4}
+
+### Vec4 __mul(Vec4, Matrix4f) {#Vec4-mul-Vec4-Matrix4f}
 
 ## List of Properties
 
