--- a/docs/90-api/enums/vertexComponent.mdx
+++ b/docs/90-api/enums/vertexComponent.mdx
@@ -26,3 +26,8 @@ id: vertexComponent
 | Bitangent |  |
 | Index |  |
 | Unknown |  |
+| Data0 |  |
+| Data1 |  |
+| Data2 |  |
+| Data3 |  |
+| Data4 |  |
