--- a/docs/90-api/enums/vertexComponentFormat.mdx
+++ b/docs/90-api/enums/vertexComponentFormat.mdx
@@ -36,3 +36,25 @@ id: vertexComponentFormat
 | FloatVec2 |  |
 | FloatVec3 |  |
 | FloatVec4 |  |
+| FloatMat2x2 |  |
+| FloatMat2x3 |  |
+| FloatMat2x4 |  |
+| FloatMat3x2 |  |
+| FloatMat3x3 |  |
+| FloatMat3x4 |  |
+| FloatMat4x2 |  |
+| FloatMat4x3 |  |
+| FloatMat4x4 |  |
+| Double |  |
+| DoubleVec2 |  |
+| DoubleVec3 |  |
+| DoubleVec4 |  |
+| DoubleMat2x2 |  |
+| DoubleMat2x3 |  |
+| DoubleMat2x4 |  |
+| DoubleMat3x2 |  |
+| DoubleMat3x3 |  |
+| DoubleMat3x4 |  |
+| DoubleMat4x2 |  |
+| DoubleMat4x3 |  |
+| DoubleMat4x4 |  |
