--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -13,9 +13,13 @@ id: Object
 
 ### userdata GetComponent(int) {#userdata-GetComponent-int}
 
+### table GetComponents() {#table-GetComponents}
+
 ### userdata RemoveComponent(string) {#userdata-RemoveComponent-string}
 
 ### userdata GetComponentByType(string) {#userdata-GetComponentByType-string}
+
+### table GetComponentsByType(string) {#table-GetComponentsByType-string}
 
 ## List of Properties
 
