--- a/docs/90-api/scriptComponent.mdx
+++ b/docs/90-api/scriptComponent.mdx
@@ -64,23 +64,17 @@ end
 
 ## List of Methods
 
-### MeshDataBuilder() {#MeshDataBuilder}
+### Transform Get(string) {#Transform-Get-string}
 
-### void Clear() {#void-Clear}
+### Transform GetChild(int) {#Transform-GetChild-int}
 
-### int AddVertex(Vec3, Vec4) {#int-AddVertex-Vec3-Vec4}
+### Vec3 LocalToWorld(Vec3) {#Vec3-LocalToWorld-Vec3}
 
-### int AddVertex(Vec3, Vec2, Vec4) {#int-AddVertex-Vec3-Vec2-Vec4}
+### Vec3 WorldToLocal(Vec3) {#Vec3-WorldToLocal-Vec3}
 
-### int AddVertex(Vec3, Vec2) {#int-AddVertex-Vec3-Vec2}
+### Vec3 LocalToWorldVec(Vec3) {#Vec3-LocalToWorldVec-Vec3}
 
-### int AddVertex(Vec3) {#int-AddVertex-Vec3}
-
-### void AddIndex(int, int, int) {#void-AddIndex-int-int-int}
-
-### void AddIndex(int, int) {#void-AddIndex-int-int}
-
-### void AddIndex(int) {#void-AddIndex-int}
+### Vec3 WorldToLocalVec(Vec3) {#Vec3-WorldToLocalVec-Vec3}
 
 ## List of Properties
 
