--- a/docs/90-api/voxelData.mdx
+++ b/docs/90-api/voxelData.mdx
@@ -7,6 +7,10 @@ id: VoxelData
 
 ## List of Methods
 
+### void AddVoxelInfo(float, userdata, string) {#void-AddVoxelInfo-float-userdata-string}
+
+### void Clear() {#void-Clear}
+
 ## List of Properties
 
 ### string resource {#string-resource}
