--- a/docs/90-api/voxelInspectData.mdx
+++ b/docs/90-api/voxelInspectData.mdx
@@ -33,13 +33,13 @@ id: VoxelInspectData
 
 ### table GetObjectsByTag(string) {#table-GetObjectsByTag-string}
 
-### Object GetObjectById(int) {#Object-GetObjectById-int}
-
-### userdata GetNativeComponentById(string, int) {#userdata-GetNativeComponentById-string-int}
-
 ### bool IsServerReady() {#bool-IsServerReady}
 
-### void Save(string) {#void-Save-string}
+### bool GetAmFileLoaded() {#bool-GetAmFileLoaded}
+
+### void SetAmFileLoaded() {#void-SetAmFileLoaded}
+
+### bool Save(string) {#bool-Save-string}
 
 ### int Merge(string) {#int-Merge-string}
 
