--- a/docs/90-api/voxelRender.mdx
+++ b/docs/90-api/voxelRender.mdx
@@ -7,6 +7,10 @@ id: VoxelRender
 
 ## List of Methods
 
+### void AddVoxelInfo(float, userdata, string) {#void-AddVoxelInfo-float-userdata-string}
+
+### void Clear() {#void-Clear}
+
 ## List of Properties
 
 ### string type {#string-type}
