--- a/docs/90-api/meshRender.mdx
+++ b/docs/90-api/meshRender.mdx
@@ -7,6 +7,10 @@ id: MeshRender
 
 ## List of Methods
 
+### void AddVoxelInfo(float, userdata, string) {#void-AddVoxelInfo-float-userdata-string}
+
+### void Clear() {#void-Clear}
+
 ## List of Properties
 
 ### userdata material {#userdata-material}
