Generate headers for constructors and metamethods

--- a/docs/90-api/input.mdx
+++ b/docs/90-api/input.mdx
@@ -5,9 +5,11 @@ id: Input
 `Client`
 `Server`
 
-## List of Methods
+## List of Constructors
 
 ### Input() {#Input}
+
+## List of Methods
 
 ### bool KeyDown(int) {#bool-KeyDown-int}
 
