--- a/docs/90-api/material.mdx
+++ b/docs/90-api/material.mdx
@@ -5,9 +5,11 @@ id: Material
 `Client`
 `Server`
 
-## List of Methods
+## List of Constructors
 
 ### Material(string, FilePath) {#Material-string-FilePath}
+
+## List of Methods
 
 ### bool IsValid() {#bool-IsValid}
 
