--- a/docs/90-api/meshDataBuilder.mdx
+++ b/docs/90-api/meshDataBuilder.mdx
@@ -5,9 +5,11 @@ id: MeshDataBuilder
 `Client`
 `Server`
 
-## List of Methods
+## List of Constructors
 
 ### MeshDataBuilder() {#MeshDataBuilder}
+
+## List of Methods
 
 ### void Clear() {#void-Clear}
 
