--- a/docs/90-api/quat.mdx
+++ b/docs/90-api/quat.mdx
@@ -5,9 +5,10 @@ id: Quat
 `Client`
 `Server`
 
-## List of Methods
+## List of Constructors
 
 ### Quat() {#Quat}
+asdasdasdasdasd
 
 ### Quat(float, float, float, float) {#Quat-float-float-float-float}
 
@@ -19,7 +20,10 @@ id: Quat
 
 ### Quat(Vec3, Vec3) {#Quat-Vec3-Vec3}
 
+## List of Metamethods
+
 ### float __index(Vec3, int) {#float-index-Vec3-int}
+dddd
 
 ### void __newindex(Vec3, int, float) {#void-newindex-Vec3-int-float}
 
@@ -42,6 +46,8 @@ id: Quat
 ### Quat __unm(Quat, Quat) {#Quat-unm-Quat-Quat}
 
 ### bool __eq(Quat, Quat) {#bool-eq-Quat-Quat}
+
+## List of Methods
 
 ### Quat Euler(Vec3) {#Quat-Euler-Vec3}
 
