--- a/docs/90-api/vec2.mdx
+++ b/docs/90-api/vec2.mdx
@@ -5,7 +5,7 @@ id: Vec2
 `Client`
 `Server`
 
-## List of Methods
+## List of Constructors
 
 ### Vec2() {#Vec2}
 
@@ -16,6 +16,8 @@ id: Vec2
 ### Vec2(Vec2) {#Vec2-Vec2}
 
 ### Vec2(Vec2i) {#Vec2-Vec2i}
+
+## List of Metamethods
 
 ### float __index(Vec2, int) {#float-index-Vec2-int}
 
@@ -50,6 +52,8 @@ id: Vec2
 ### bool __eq(Vec2, Vec2) {#bool-eq-Vec2-Vec2}
 
 ### float __len(Vec2, Vec2) {#float-len-Vec2-Vec2}
+
+## List of Methods
 
 ### float Sum() {#float-Sum}
 
