--- a/docs/90-api/vec2i.mdx
+++ b/docs/90-api/vec2i.mdx
@@ -5,7 +5,7 @@ id: Vec2i
 `Client`
 `Server`
 
-## List of Methods
+## List of Constructors
 
 ### Vec2i() {#Vec2i}
 
@@ -14,6 +14,8 @@ id: Vec2i
 ### Vec2i(int) {#Vec2i-int}
 
 ### Vec2i(Vec2i) {#Vec2i-Vec2i}
+
+## List of Metamethods
 
 ### int __index(Vec2i, int) {#int-index-Vec2i-int}
 
@@ -74,6 +76,8 @@ id: Vec2i
 ### Vec2i __shr(Vec2i, int) {#Vec2i-shr-Vec2i-int}
 
 ### Vec2i __shr(Vec2i, Vec2i) {#Vec2i-shr-Vec2i-Vec2i}
+
+## List of Methods
 
 ### int Sum() {#int-Sum}
 
