--- a/docs/90-api/vec3.mdx
+++ b/docs/90-api/vec3.mdx
@@ -21,7 +21,7 @@ This action is dangerous
 
 :::
 
-## List of Methods
+## List of Constructors
 
 ### Vec3() {#Vec3}
 
@@ -36,6 +36,8 @@ This action is dangerous
 ### Vec3(Vec3i) {#Vec3-Vec3i}
 
 ### Vec3(Vec2, float) {#Vec3-Vec2-float}
+
+## List of Metamethods
 
 ### float __index(Vec3, int) {#float-index-Vec3-int}
 
@@ -74,6 +76,8 @@ This action is dangerous
 ### bool __eq(Vec3, Vec3) {#bool-eq-Vec3-Vec3}
 
 ### float __len(Vec3, Vec3) {#float-len-Vec3-Vec3}
+
+## List of Methods
 
 ### float Sum() {#float-Sum}
 
