--- a/docs/90-api/vec3i.mdx
+++ b/docs/90-api/vec3i.mdx
@@ -5,7 +5,7 @@ id: Vec3i
 `Client`
 `Server`
 
-## List of Methods
+## List of Constructors
 
 ### Vec3i() {#Vec3i}
 
@@ -16,6 +16,8 @@ id: Vec3i
 ### Vec3i(int) {#Vec3i-int}
 
 ### Vec3i(Vec3i) {#Vec3i-Vec3i}
+
+## List of Metamethods
 
 ### int __index(Vec3i, int) {#int-index-Vec3i-int}
 
@@ -76,6 +78,8 @@ id: Vec3i
 ### Vec3i __shr(Vec3i, int) {#Vec3i-shr-Vec3i-int}
 
 ### Vec3i __shr(Vec3i, Vec3i) {#Vec3i-shr-Vec3i-Vec3i}
+
+## List of Methods
 
 ### int Sum() {#int-Sum}
 
