--- a/docs/90-api/vec4.mdx
+++ b/docs/90-api/vec4.mdx
@@ -5,7 +5,7 @@ id: Vec4
 `Client`
 `Server`
 
-## List of Methods
+## List of Constructors
 
 ### Vec4() {#Vec4}
 
@@ -20,6 +20,8 @@ id: Vec4
 ### Vec4(Vec2, float, float) {#Vec4-Vec2-float-float}
 
 ### Vec4(Vec3, float) {#Vec4-Vec3-float}
+
+## List of Metamethods
 
 ### float __index(Vec4, int) {#float-index-Vec4-int}
 
@@ -48,6 +50,8 @@ id: Vec4
 ### bool __eq(Vec4, Vec4) {#bool-eq-Vec4-Vec4}
 
 ### float __len(Vec4, Vec4) {#float-len-Vec4-Vec4}
+
+## List of Methods
 
 ### float Sum() {#float-Sum}
 
