--- a/docs/90-api/angle.mdx
+++ b/docs/90-api/angle.mdx
@@ -5,23 +5,43 @@ id: Angle
 `Client`
 `Server`
 
-## List of Methods
+alksjdlkajsdkljalkjd asdalksd
+
+## List of Constructors
 
 ### Angle() {#Angle}
+123
 
 ### Angle(float, float) {#Angle-float-float}
+aksldkjlaksjdklasd
 
 ### Angle(float) {#Angle-float}
+ddddddd
+dddddddddd
+
+## List of Metamethods
 
 ### bool __eq(Angle, Angle) {#bool-eq-Angle-Angle}
+adasd
+
+## List of Methods
 
 ### void Set(float) {#void-Set-float}
+asdasdasd
 
 ### float Get() {#float-Get}
+adddddd
 
 ## List of Properties
 
+### float Get() {#float-Get}
+adsjaksdj
+
+### float Get() {#float-Get}
+asdasdasd
+
 ### float sine {#float-sine}
+asdasdasd
 
 ### float cosine {#float-cosine}
-
+asdasdasdasd
