--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -21,6 +21,8 @@ id: Object
 
 ### table GetComponentsByType(string) {#table-GetComponentsByType-string}
 
+### ScriptComponent FindScriptComponentByName(string) {#ScriptComponent-FindScriptComponentByName-string}
+
 ## List of Properties
 
 ### string name {#string-name}
