--- a/docs/90-api/scriptComponent.mdx
+++ b/docs/90-api/scriptComponent.mdx
@@ -64,17 +64,13 @@ end
 
 ## List of Methods
 
-### Transform Get(string) {#Transform-Get-string}
+### bool GetSyncToClient() {#bool-GetSyncToClient}
 
-### Transform GetChild(int) {#Transform-GetChild-int}
+### void SetSyncToClient(bool) {#void-SetSyncToClient-bool}
 
-### Vec3 LocalToWorld(Vec3) {#Vec3-LocalToWorld-Vec3}
+### void SendMessage(string, table, int) {#void-SendMessage-string-table-int}
 
-### Vec3 WorldToLocal(Vec3) {#Vec3-WorldToLocal-Vec3}
-
-### Vec3 LocalToWorldVec(Vec3) {#Vec3-LocalToWorldVec-Vec3}
-
-### Vec3 WorldToLocalVec(Vec3) {#Vec3-WorldToLocalVec-Vec3}
+### void SendMessage(string, table) {#void-SendMessage-string-table}
 
 ## List of Properties
 
