--- a/docs/90-api/voxelInspectData.mdx
+++ b/docs/90-api/voxelInspectData.mdx
@@ -5,58 +5,6 @@ id: VoxelInspectData
 `Client`
 `Server`
 
-## List of Methods
-
-### double GetTime() {#double-GetTime}
-
-### double GetTimeDelta() {#double-GetTimeDelta}
-
-### double GetDebugTime() {#double-GetDebugTime}
-
-### bool Test() {#bool-Test}
-
-### Object CreateObject() {#Object-CreateObject}
-
-### Object CloneObject(Object) {#Object-CloneObject-Object}
-
-### void DestroyObject(Object) {#void-DestroyObject-Object}
-
-### userdata CreateMaterial(string) {#userdata-CreateMaterial-string}
-
-### void DebugStats() {#void-DebugStats}
-
-### table GetObjectsByName(string) {#table-GetObjectsByName-string}
-
-### table GetAllObjects() {#table-GetAllObjects}
-
-### table GetRootObjects() {#table-GetRootObjects}
-
-### table GetObjectsByTag(string) {#table-GetObjectsByTag-string}
-
-### bool IsServerReady() {#bool-IsServerReady}
-
-### bool GetAmFileLoaded() {#bool-GetAmFileLoaded}
-
-### void SetAmFileLoaded() {#void-SetAmFileLoaded}
-
-### bool Save(string) {#bool-Save-string}
-
-### int Merge(string) {#int-Merge-string}
-
-### void ScheduleLoad(string) {#void-ScheduleLoad-string}
-
-### void RebuildLighting() {#void-RebuildLighting}
-
-### LightingUpdate CreateLighting(string, string) {#LightingUpdate-CreateLighting-string-string}
-
-### VoxelDB GetVoxelDB(string) {#VoxelDB-GetVoxelDB-string}
-
-### int MontageCreate(Object) {#int-MontageCreate-Object}
-
-### int MontageUnlink(Object) {#int-MontageUnlink-Object}
-
-### Object MontageInstantiate(string) {#Object-MontageInstantiate-string}
-
 ## List of Properties
 
 ### float voxelSize {#float-voxelSize}
@@ -64,4 +12,6 @@ id: VoxelInspectData
 ### string texts {#string-texts}
 
 ### userdata positions {#userdata-positions}
+
+### userdata colors {#userdata-colors}
 
